--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@uiw/react-textarea-code-editor": "^2.0.1",
+    "@uiw/react-md-editor": "^3.12.1",
     "apollo-link-context": "^1.0.20",
     "graphql": "^15.6.0",
     "graphql-tag": "^2.12.5",
